assets/css/wishlist.css
._sggpze {
  -webkit-box-align: center !important;
  border: 1px solid rgb(235, 235, 235) !important;
  border-radius: 16px !important;
  padding: 16px 24px !important;
  display: flex !important;
  align-items: center !important;
  min-height: 90px !important;
  box-sizing: border-box !important;
}

._sggpze:hover {
  border-color: rgb(34, 34, 34) !important;
}

._o7xaku5 {
  cursor: pointer !important;
  position: relative !important;
  touch-action: manipulation !important;
  font-family: inherit !important;
  font-size: inherit !important;
  line-height: inherit !important;
  font-weight: inherit !important;
  border-radius: 16px !important;
  outline: none !important;
  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
  -webkit-tap-highlight-color: transparent !important;
  background: transparent !important;
  border: none !important;
  color: inherit !important;
  display: block !important;
  margin: 0px !important;
  padding: 0px !important;
  text-align: inherit !important;
  text-decoration: none !important;
  height: 100% !important;
  width: 100% !important;
}

@media (min-width: 744px) {

  ._1gglzn7 {
    margin-bottom: 24px !important;
  }
} 

._vxvq8x {
  -webkit-box-pack: center !important;
  -webkit-box-align: end !important;
  -webkit-box-direction: normal !important;
  -webkit-box-orient: horizontal !important;
  z-index: 2000 !important;
  position: fixed !important;
  inset: 0px !important;
  max-height: calc(var(--vh, 1vh) * 100) !important;
  padding-top: calc(12px + env(safe-area-inset-top, 0)) !important;
  display: flex !important;
  flex-direction: row !important;
  align-items: flex-end !important;
  justify-content: center !important;
}
@supports (max-height: -webkit-fill-available) {

  ._vxvq8x {
    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
  }
} 

._z4lmgp {
  display: contents !important;
}


@media (min-width: 744px) and (min-height: 475px) {
  
  ._vxvq8x {
   -webkit-box-align: center !important;
   padding: 40px !important;
   align-items: center !important;
 }
}

._1t0jy5tw {
  z-index: 2000 !important;
  position: fixed !important;
  inset: 0px !important;
  overflow-y: auto !important;
  background: rgb(34, 34, 34) !important;
  animation-duration: 400ms !important;
  animation-iteration-count: 1 !important;
  animation-fill-mode: both !important;
  animation-name: keyframe_15p0df !important;
}

@media (min-width: 744px) {

  ._1t0jy5tw {
    background: rgb(34, 34, 34) !important;
  }
}

._oda838 {
  appearance: none !important;
  display: inline-block !important;
  border-radius: 50% !important;
  border: none !important;
  outline: none !important;
  margin: 0px !important;
  padding: 0px !important;
  color: rgb(34, 34, 34) !important;
  cursor: pointer !important;
  touch-action: manipulation !important;
  position: relative !important;
  background: transparent !important;
  transition: -ms-transform 0.25s ease 0s, -webkit-transform 0.25s ease 0s, transform 0.25s ease 0s !important;
}

._oda838::before {
  content: "" !important;
  display: block !important;
  position: absolute !important;
  top: 50% !important;
  left: 50% !important;
  transform: translate(-50%, -50%) !important;
  width: 32px !important;
  height: 32px !important;
  border-radius: 50% !important;
}

._e296pg {
  position: relative !important;
}

._1youxq0 {
  -webkit-box-pack: justify !important;
  -webkit-box-align: center !important;
  display: flex !important;
  flex: 0 0 auto !important;
  align-items: center !important;
  justify-content: space-between !important;
  padding: 0px 24px !important;
  min-height: 48px !important;
  border-bottom: 1px solid rgb(235, 235, 235) !important;
  color: rgb(34, 34, 34) !important;
  font-size: 16px !important;
  line-height: 20px !important;
  font-weight: 800 !important;
}

._12kfhdn {
  padding: 24px !important;
  flex: 1 1 auto !important;
  overflow-y: auto !important;
  outline: none !important;
}

@media (min-width: 744px) {
  
  ._1qfon39 {
    padding: 8px !important;
  }
} 

@media (min-width: 744px) {

  ._1gglzn7 {
    margin-bottom: 24px !important;
  }
} 

._g2ext {
  display: none;
}

._1u5lyjm {
  -webkit-box-pack: justify !important;
  display: flex !important;
  width: 100% !important;
  justify-content: space-between !important;
}

@supports (max-height: -webkit-fill-available) 
{
  ._virdaj {
    max-height: max(-webkit-fill-available, calc(var(--vh, 1vh) * 100)) !important;
  }
}

._2f11rw {
  padding-left: 16px !important;
}

._17er5s9 {
  -webkit-box-align: center !important;
  font-size: 14px !important;
  line-height: 18px !important;
  align-items: center !important;
  color: rgb(34, 34, 34) !important;
  display: flex !important;
}

._udzbwj {
  font-weight: 600 !important;
  padding-right: 8px !important;
}

._1thnfbs8 {
  box-sizing: border-box !important;
  cursor: pointer !important;
  text-align: center !important;
  position: relative !important;
  border: 0px !important;
  color: rgb(34, 34, 34) !important;
  padding: 0px !important;
  border-radius: 50% 4px 4px 50% !important;
  background: rgb(247, 247, 247) !important;
}

._1nmnz1zg {
  -webkit-box-direction: normal !important;
  -webkit-box-orient: vertical !important;
  -webkit-box-pack: center !important;
  -webkit-box-align: center !important;
  margin-left: 1px !important;
  margin-right: 1px !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-direction: column !important;
  border-radius: 100% !important;
  font-size: 14px !important;
  line-height: 18px !important;
  font-weight: 600 !important;
  background: rgb(34, 34, 34) !important;
  border: 1.5px solid rgb(34, 34, 34) !important;
  color: rgb(255, 255, 255) !important;
  position: relative !important;
}

._1nf2vyse {
  -webkit-box-direction: normal !important;
  -webkit-box-orient: vertical !important;
  -webkit-box-pack: center !important;
  -webkit-box-align: center !important;
  margin-left: 1px !important;
  margin-right: 1px !important;
  display: flex !important;
  align-items: center !important;
  justify-content: center !important;
  flex-direction: column !important;
  border-radius: 100% !important;
  font-size: 14px !important;
  line-height: 18px !important;
  font-weight: 600 !important;
  background: rgb(34, 34, 34) !important;
  border: 1.5px solid rgb(34, 34, 34) !important;
  color: rgb(255, 255, 255) !important;
  position: relative !important;
}

._1esiloo3,._1ifwywb1, ._7179yqh {
  box-sizing: border-box !important;
  cursor: pointer !important;
  text-align: center !important;
  position: relative !important;
  border: 0px !important;
  color: rgb(34, 34, 34) !important;
  padding: 0px !important;
  background: rgb(247, 247, 247) !important;
}

._1gosri9s,._gkknk2q,
._119nin5s {
  -webkit-box-direction: normal !important;
    -webkit-box-orient: vertical !important;
    -webkit-box-pack: center !important;
    -webkit-box-align: center !important;
    margin-left: 1px !important;
    margin-right: 1px !important;
    display: flex !important;
    align-items: center !important;
    justify-content: center !important;
    flex-direction: column !important;
    border-radius: 100% !important;
    position: relative !important;
    font-size: 14px !important;
    line-height: 18px !important;
    font-weight: 600 !important;
    color: rgb(34, 34, 34) !important;
    border: 1.5px solid rgb(247, 247, 247) !important;
}

._e0px5r {
  font-size: 26px !important;
  line-height: 30px !important;
  margin-top: 40px !important;
  margin-bottom: 24px !important;
  font-weight: 600 !important;
  color: rgb(34, 34, 34) !important;
  display: block !important;
}

._1ywltba {
  -webkit-box-align: center !important;
  display: flex !important;
  align-items: center !important;
  margin-top: 24px !important;
  margin-bottom: 24px !important;
}

._1x7xqyv {
  max-width: 100% !important;
  width: 64px !important;
  height: 64px !important;
  border-radius: 8px !important;
  display: inline-block !important;
  object-fit: cover !important;
  margin-right: 16px !important;
}

._1l9dusq {
  margin-left: 22px !important;
  margin-right: 22px !important;
  border-radius: 4px !important;
  overflow: hidden !important;
}

._1xzp9wc {
  font-size: 16px !important;
  line-height: 20px !important;
  font-weight: 600 !important;
  overflow: hidden !important;
  color: rgb(34, 34, 34) !important;
  text-overflow: ellipsis !important;
}

._mnf8sq {
  width: 100% !important;
  height: 76px !important;
  outline: none !important;
  cursor: pointer !important;
  border: 1px solid rgb(221, 221, 221) !important;
  border-radius: 12px !important;
  box-sizing: border-box !important;
  background: rgb(255, 255, 255) !important;
  margin-bottom: 16px !important;
}

@media (min-width: 1128px) {
  ._9zsv75f {
      width: 50% !important;
      padding-left: 8px !important;
      padding-right: 8px !important;
  }
}

@media (min-width: 950px) {
  
  ._9zsv75f {
    padding-left: 8px !important;
    padding-right: 8px !important;
  }
} 

._lo9vot {
  font-size: 16px !important;
  line-height: 20px !important;
  color: rgb(34, 34, 34) !important;
}

